--- a/css/css.css
+++ b/css/css.css
@@ -7,25 +7,9 @@ and open the template in the editor.
     Created on : 12/08/2016, 10:24:28 PM
     Author     : cfagu
 */
-h1 {
-    margin: 10px;
-    font-family: sans-serif;
-    font-size: xx-large;
-}
-
-h2 {
-    margin: 10px;
-    font-family: sans-serif;
-}
-
-h3 {
-    margin: 10px;
-    font-family: sans-serif;
-}
-
 img.list {
-    width: 280px;
-    height: 250px;
+    width: 400px;
+    height: 300px;
 }
 
 img.retrato {
@@ -33,17 +17,12 @@ img.retrato {
     height: 280px;
 }
 
-div.list {
-    width: 50%;
-    margin: auto;
-}
-
-div.listElement {
-    width: 280px;
-    display: inline-block;
+div.footer {
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 3em;
+    margin-top: 10px;
     margin-left: 80px;
     margin-right: 80px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    
 }
